--- a/.github/workflows/deploy-spot-wav2lip-ec2-us-east-2.yml
+++ b/.github/workflows/deploy-spot-wav2lip-ec2-us-east-2.yml
@@ -175,22 +175,22 @@ jobs:
             sudo apt update
             sudo apt install -y software-properties-common wget curl ffmpeg build-essential awscli
             
-            # Install Python 3.12 from deadsnakes PPA
+            # Install Python 3.10 from deadsnakes PPA
             sudo add-apt-repository ppa:deadsnakes/ppa -y
             sudo apt update
-            sudo apt install -y python3.12 python3.12-venv python3.12-dev
+            sudo apt install -y python3.10 python3.10-venv python3.10-dev
             
             # Verify Python installation
-            python3.12 --version
+            python3.10 --version
             
             # Verify ffmpeg installation
             ffmpeg -version
             
-            # Install pip for Python 3.12
-            curl -sS https://bootstrap.pypa.io/get-pip.py | python3.12
+            # Install pip for Python 3.10
+            curl -sS https://bootstrap.pypa.io/get-pip.py | python3.10
             
             # Install Poetry
-            curl -sSL https://install.python-poetry.org | python3.12 -
+            curl -sSL https://install.python-poetry.org | python3.10 -
             export PATH="$HOME/.local/bin:$PATH"
             
             # Verify Poetry installation
@@ -207,14 +207,11 @@ jobs:
             poetry config virtualenvs.create true
             poetry config virtualenvs.in-project true
             
-            # Export Hugging Face token (from Actions secret)
-            export HUGGINGFACE_HUB_TOKEN=${HF_TOKEN}
-
             # Install dependencies using Poetry
-            poetry install --no-dev
+            poetry install
             
             # Keep the project ready
-            echo "Project setup complete with Python 3.12 and Poetry"
+            echo "Project setup complete with Python 3.10 and Poetry"
           EOF
 
 
